iQos-Dev1/src/objects/Module__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <description>Module description</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduler__c</fullName>
        <label>Scheduler</label>
        <referenceTo>Scheduler__c</referenceTo>
        <relationshipLabel>Modules</relationshipLabel>
        <relationshipName>Modules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Module</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Scheduler__c</columns>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Module Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Modules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>